Arrumando posicionamento do forms

--- a/SPI-PARK/pages/index.html
+++ b/SPI-PARK/pages/index.html
@@ -204,7 +204,7 @@
                 id="firstname"
                 type="text"
                 name="firstname"
-                placeholder="Digite seu primeiro nome"
+                placeholder="Digite seu nome"
                 required
               />
             </div>
@@ -246,66 +246,73 @@
         </form>
       </div>
     </div>
+
+    <!--Mapa-->
+
+    <div class="mapBox">
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14632.63539389171!2d-46.78689894025788!3d-23.52678846117477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ceff1b4a2343b5%3A0x3c446e53f0c9499!2sR.%20Erasmo%20Braga%2C%20190%20-%20Pres.%20Altino%2C%20Osasco%20-%20SP%2C%2006213-000!5e0!3m2!1spt-BR!2sbr!4v1721138389783!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     
 
     <!--Tabela de preços-->
     <div class="table">
       <div class="table-responsive">
-        <table
-          class="table table-striped table-hover table-bordered table-sm align-middle caption-top"
-        >
-          <thead class="table-warning">
-            <tr>
-              <th>Avulso</th>
-              <th>Carro pequeno</th>
-              <th>Avulso</th>
-              <th>Carro grande/utilitário</th>
-            </tr>
-          </thead>
-          <tbody class="table-group-divider">
-            <tr>
-              <td>ATÉ 30 MIN</td>
-              <td>R$ 7,00</td>
-              <td>ATÉ 30 MIN</td>
-              <td>R$10,00</td>
-            </tr>
-            <tr class="table-warning">
-              <td>ATÉ 1 H</td>
-              <td>R$ 12,00</td>
-              <td>ATÉ 1 H</td>
-              <td>R$ 15,00</td>
-            </tr>
-            <tr>
-              <td>ATÉ 2 H</td>
-              <td>R$ 14,00</td>
-              <td>ATÉ 2 H</td>
-              <td>R$ 30,00</td>
-            </tr>
-            <tr class="table-warning">
-              <td>D+ HORAS</td>
-              <td>+ R$ 3,00</td>
-              <td>D+ HORAS</td>
-              <td>+ R$ 5,00</td>
-            </tr>
-            <tr>
-              <td>DIARIA 12 H</td>
-              <td>R$ 18,00</td>
-              <td>DIARIA 12 H</td>
-              <td>R$ 35,00</td>
-            </tr>
-            <tr class="table-warning">
-              <td>PERIODO 24 H</td>
-              <td>R$ 30,00</td>
-              <td>PERIODO 24 H</td>
-              <td>R$ 50,00</td>
-            </tr>
-          </tbody>
-          <caption class="text-center table-dark">
-            Tabela de Preços
-          </caption>
-        </table>
+          <table class="table table-striped table-hover table-bordered table-sm align-middle caption-top">
+              <thead class="table-warning">
+                  <tr>
+                      <th>Avulso</th>
+                      <th>Carro pequeno</th>
+                      <th>Avulso</th>
+                      <th>Carro grande/utilitário</th>
+                  </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                  <tr>
+                      <td>ATÉ 30 MIN</td>
+                      <td>R$ 7,00</td>
+                      <td>ATÉ 30 MIN</td>
+                      <td>R$10,00</td>
+                  </tr>
+                  <tr>
+                      <td>ATÉ 1 H</td>
+                      <td>R$ 12,00</td>
+                      <td>ATÉ 1 H</td>
+                      <td>R$ 15,00</td>
+                  </tr>
+                  <tr>
+                      <td>ATÉ 2 H</td>
+                      <td>R$ 14,00</td>
+                      <td>ATÉ 2 H</td>
+                      <td>R$ 30,00</td>
+                  </tr>
+                  <tr>
+                      <td>D+ HORAS</td>
+                      <td>+ R$ 3,00</td>
+                      <td>D+ HORAS</td>
+                      <td>+ R$ 5,00</td>
+                  </tr>
+                  <tr>
+                      <td>DIÁRIA 12 H</td>
+                      <td>R$ 18,00</td>
+                      <td>DIÁRIA 12 H</td>
+                      <td>R$ 35,00</td>
+                  </tr>
+                  <tr>
+                      <td>PERÍODO 24 H</td>
+                      <td>R$ 30,00</td>
+                      <td>PERÍODO 24 H</td>
+                      <td>R$ 50,00</td>
+                  </tr>
+              </tbody>
+              <caption class="text-center table-dark">Tabela de Preços</caption>
+          </table>
       </div>
-    </div>
+  </div>
+
+  <footer>
+    <h1>rodapÉ</h1>
+  </footer>
+  
 
     <script src="../assets/js/script.js"></script>
   </body>
